err/cap-decompiler.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/cap_decompiler'...
Listing './lib/python3.5/site-packages/cap_decompiler/filters'...
Compiling './lib/python3.5/site-packages/cap_decompiler/graph.py'...
***   File "./lib/python3.5/site-packages/cap_decompiler/graph.py", line 118
    print '%x: cannot follow jump to %s' % (ea, repr(dest))
                                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cap_decompiler/host'...
Listing './lib/python3.5/site-packages/cap_decompiler/host/capstone'...
Listing './lib/python3.5/site-packages/cap_decompiler/host/capstone/dis'...
Compiling './lib/python3.5/site-packages/cap_decompiler/host/capstone/dis/__init__.py'...
***   File "./lib/python3.5/site-packages/cap_decompiler/host/capstone/dis/__init__.py", line 11
    print 'Architecture: 32-bit intel.'
                                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/cap_decompiler/host/dis.py'...
***   File "./lib/python3.5/site-packages/cap_decompiler/host/dis.py", line 9
    print 'Using IDA backend.'
                             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/cap_decompiler/host/ida'...
Listing './lib/python3.5/site-packages/cap_decompiler/host/ida/dis'...
Compiling './lib/python3.5/site-packages/cap_decompiler/host/ida/dis/__init__.py'...
***   File "./lib/python3.5/site-packages/cap_decompiler/host/ida/dis/__init__.py", line 15
    print 'Architecture: 32-bit intel.'
                                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/cap_decompiler/host/ida/dis/intel.py'...
***   File "./lib/python3.5/site-packages/cap_decompiler/host/ida/dis/intel.py", line 160
    print '%x: call to function thunk %x' % (ea, fct.value)
                                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cap_decompiler/host/ida/ui'...
Compiling './lib/python3.5/site-packages/cap_decompiler/host/ida/ui/browser.py'...
***   File "./lib/python3.5/site-packages/cap_decompiler/host/ida/ui/browser.py", line 13
    print 'PySide not available'
                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/cap_decompiler/host/ida/ui/decompiler_form.py'...
***   File "./lib/python3.5/site-packages/cap_decompiler/host/ida/ui/decompiler_form.py", line 20
    print 'PySide not available'
                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/cap_decompiler/host/ida/ui/graph_test.py'...
***   File "./lib/python3.5/site-packages/cap_decompiler/host/ida/ui/graph_test.py", line 138
    print 'decompile:', idc.here()
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cap_decompiler/host/ida/ui/main.py'...
***   File "./lib/python3.5/site-packages/cap_decompiler/host/ida/ui/main.py", line 20
    print 'Decompiling %x' % (ea, )
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cap_decompiler/host/ui.py'...
***   File "./lib/python3.5/site-packages/cap_decompiler/host/ui.py", line 6
    print 'Using IDA backend.'
                             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/cap_decompiler/ir'...
Compiling './lib/python3.5/site-packages/cap_decompiler/objdump-decompiler.py'...
***   File "./lib/python3.5/site-packages/cap_decompiler/objdump-decompiler.py", line 65
    print '----------'
                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/cap_decompiler/output'...
Compiling './lib/python3.5/site-packages/cap_decompiler/ssa.py'...
***   File "./lib/python3.5/site-packages/cap_decompiler/ssa.py", line 706
    print 'more than one group'
                              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/cap_decompiler/tests'...
Listing './lib/python3.5/site-packages/cap_decompiler/tests/common'...
Compiling './lib/python3.5/site-packages/cap_decompiler/tests/common/disassembler.py'...
***   File "./lib/python3.5/site-packages/cap_decompiler/tests/common/disassembler.py", line 43
    print 'Could not parse IR from text.'
                                        ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/cap_decompiler/tests/common/ply'...
Compiling './lib/python3.5/site-packages/cap_decompiler/tests/common/ply/ir_lexer.py'...
***   File "./lib/python3.5/site-packages/cap_decompiler/tests/common/ply/ir_lexer.py", line 90
    print tok
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/cap_decompiler/tests/common/ply/ir_parser.py'...
***   File "./lib/python3.5/site-packages/cap_decompiler/tests/common/ply/ir_parser.py", line 266
    print parse(text)
              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cap_decompiler/tests/data'...
Compiling './lib/python3.5/site-packages/cap_decompiler/tests/run.py'...
***   File "./lib/python3.5/site-packages/cap_decompiler/tests/run.py", line 13
    print 'not successful'
                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/cap_decompiler/tests/unit'...
Compiling './lib/python3.5/site-packages/cap_decompiler/tests/unit/test_helper.py'...
***   File "./lib/python3.5/site-packages/cap_decompiler/tests/unit/test_helper.py", line 22
    print 'warning: Capstone tests are unavailable'
                                                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/cap_decompiler-0.1.3.dist-info'...
Listing './lib/python3.5/site-packages/capstone'...
Listing './lib/python3.5/site-packages/capstone-3.0.4.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
